Text input autocorrect="off" attribute ignored on Mac https://bugs.webkit.org/show_bug.cgi?id=151019 <rdar://problem/65061700>

Reviewed by Simon Fraser.

Source/WebCore:

Add support for the `autocorrect` attribute on macOS, by not showing the automatic spell checking popup or
automatically correcting misspelled words if the root editable element has `autocorrect="off"`.

Tests:  editing/input/cocoa/autocorrect-off.html
        editing/input/cocoa/autocorrect-on.html

* editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::isAutomaticSpellingCorrectionEnabled):

Source/WTF:

* wtf/PlatformEnableCocoa.h: Turn the feature on for macOS.

LayoutTests:

Move the existing test `fast/events/ios/contenteditable-autocorrect.html` into `editing/input/cocoa`, and
refactor it so that it:
-   Works on both iOS and macOS.
-   Tests both the `contenteditable` case and the form control case.
-   Is split into two tests: one of which uses autocorrect="off" by typing "Tset" and expecting it to remain
    as-is, and a second test that uses autocorrect="on" and verifies that "Tset" is autocorrected to "Test",
    firing an input event with `inputType` `"insertReplacementText"` in the process.

* TestExpectations:
* editing/input/cocoa/autocorrect-off-expected.txt: Added.
* editing/input/cocoa/autocorrect-off.html: Added.
* editing/input/cocoa/autocorrect-on-expected.txt: Added.
* editing/input/cocoa/autocorrect-on.html: Added.
* fast/events/ios/contenteditable-autocorrect-expected.txt: Removed.
* fast/events/ios/contenteditable-autocorrect.html: Removed.
* js/dom/dom-static-property-for-in-iteration-expected.txt:

Rebaseline a couple of existing layout tests, as well.

* platform/ios/TestExpectations:
* platform/mac-wk2/js/dom/dom-static-property-for-in-iteration-expected.txt:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/228156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265509 268f45cc-cd09-0410-ab3c-d52691b4dbfc